--- a/troyth.us/_config.yml
+++ b/troyth.us/_config.yml
@@ -13,16 +13,17 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Troy Conrad Therrien
+srgf_email: tctherrien@guggenheim.org
+cu_email: tct2003@columbia.edu
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "troyth.us" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: troytherrien
+github_username:  troyth
 
 # Build settings
 markdown: kramdown
