--- a/_config.yml
+++ b/_config.yml
@@ -3,33 +3,37 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Troy Conrad Therrien
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Personal website for Troy Conrad Therrien
+
+# Version of the site
+v: "1.0"
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+#avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 
 #
 # Flags below are optional
 #
 
 # Includes an icon in the footer for each username you enter
-footer-links:
-  dribbble:
-  email:
-  facebook:
-  flickr:
-  github: barryclark/jekyll-now
-  instagram:
-  linkedin:
-  pinterest:
-  rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
+github: "troyth"
+
+twitter: "troytherrien"
+
+facebook: "troyth"
+
+medium: "troytherrien"
+
+linkedin: "ttherrien"
+
+instagram: "troyth"
+
+onename: "troyth"
+
+rss: # just type anything here for a working RSS icon
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
@@ -37,11 +41,11 @@ footer-links:
 disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: UA-104910392-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: http://troyth.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
