--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,8 @@ instagram: "troyth"
 
 onename: "troyth"
 
+arena: "troy-conrad-therrien--2"
+
 rss: # just type anything here for a working RSS icon
 
 
